--- a/index.html
+++ b/index.html
@@ -2,107 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DriverChunk Solution - Login</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DriverChunk Solution</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Roboto&display=swap" rel="stylesheet">
   <style>
-    /* Common reset */
-    * {
+    *, *::before, *::after {
       box-sizing: border-box;
-      margin: 0; padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      user-select: none;
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
     }
 
     body {
-      background-color: #0f172a;
+      background: linear-gradient(135deg, #0f172a, #1e293b);
       color: #e0e0e0;
       min-height: 100vh;
+      padding: 2rem 1rem;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 1rem;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
-    /* Login form styles */
-    #login-container {
-      background: #1e293b;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.85);
-      max-width: 400px;
-      width: 100%;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
-    #login-container h2 {
-      color: #60a5fa;
-      text-align: center;
-    }
-
-    input[type="text"], input[type="password"] {
-      padding: 0.8rem;
-      border-radius: 6px;
-      border: none;
-      font-size: 1rem;
-    }
-
-    button {
-      padding: 0.9rem;
-      background-color: #2563eb;
-      border: none;
-      border-radius: 8px;
-      font-weight: 700;
-      color: white;
-      cursor: pointer;
-      font-size: 1.1rem;
-      user-select: none;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #1d4ed8;
-    }
-
-    .toggle {
-      text-align: center;
-      color: #60a5fa;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    .error {
-      color: #f87171;
-      font-weight: 600;
-      text-align: center;
-    }
-
-    /* Main page container, hidden initially */
-    #main-page {
-      display: none;
-      max-width: 900px;
-      width: 100%;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    /* Use your main page styles here */
     header {
-      font-size: 2.4rem;
-      font-weight: 700;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2.8rem;
       color: #60a5fa;
       margin-bottom: 0.3rem;
       text-align: center;
+      text-shadow: 0 0 12px #3b82f6;
+      animation: glow 2s infinite alternate;
+    }
+
+    @keyframes glow {
+      0% { text-shadow: 0 0 10px #3b82f6, 0 0 20px #3b82f6; }
+      100% { text-shadow: 0 0 20px #60a5fa, 0 0 30px #60a5fa; }
     }
 
     #credit {
-      font-size: 1.1rem;
-      font-weight: 500;
+      font-size: 1.2rem;
       color: #a5b4fc;
-      margin-bottom: 1.8rem;
+      margin-bottom: 2rem;
       text-align: center;
+      opacity: 0.9;
     }
 
     main {
@@ -110,29 +57,26 @@
       gap: 2rem;
       flex-wrap: wrap;
       justify-content: center;
+      width: 100%;
+      max-width: 1200px;
     }
 
     section.app-version {
-      background-color: #1e293b;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.85);
-      padding: 1.8rem 2.2rem;
+      background: linear-gradient(145deg, #1e293b, #2b354a);
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.6);
+      padding: 2rem;
       flex: 1 1 400px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      transition: background-color 0.3s ease;
+      transition: transform 0.3s ease, background 0.3s ease;
+      cursor: pointer;
     }
 
     section.app-version:hover {
-      background-color: #273449;
-    }
-
-    h2 {
-      font-size: 1.9rem;
-      color: #60a5fa;
-      margin-bottom: 1rem;
-      text-align: center;
+      transform: translateY(-8px);
+      background: linear-gradient(145deg, #2b354a, #3c4c63);
     }
 
     img {
@@ -140,343 +84,140 @@
       max-height: 240px;
       border-radius: 10px;
       box-shadow: 0 4px 14px rgba(0,0,0,0.85);
-      margin-bottom: 1.3rem;
-      background-color: #0f172a;
-      user-select: none;
+      margin-bottom: 1.5rem;
     }
 
-    p.description {
-      font-size: 1.1rem;
-      color: #cbd5e1;
+    h2 {
+      font-size: 1.8rem;
+      color: #7dd3fc;
       margin-bottom: 1rem;
-      text-align: center;
-      line-height: 1.4;
+      font-family: 'Orbitron', sans-serif;
     }
 
-    p.features {
-      font-size: 1rem;
-      color: #a5b4fc;
-      font-weight: 600;
-      margin-bottom: 1.6rem;
+    p.description, p.features {
+      font-size: 1.1rem;
       text-align: center;
-      line-height: 1.3;
+      line-height: 1.5;
     }
+
+    p.description { color: #cbd5e1; }
+    p.features { color: #a5b4fc; font-weight: 600; }
 
     a.button-download {
+      margin-top: auto;
       background-color: #2563eb;
       color: white;
-      font-weight: 700;
-      font-size: 1.1rem;
-      text-decoration: none;
       padding: 0.9rem 1.8rem;
-      border-radius: 8px;
-      box-shadow: 0 5px 14px rgba(37,99,235,0.85);
-      user-select: none;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      border-radius: 10px;
+      font-size: 1.1rem;
+      font-weight: 700;
+      text-decoration: none;
+      box-shadow: 0 5px 15px rgba(37,99,235,0.6);
+      transition: all 0.3s ease;
     }
 
-    a.button-download:hover,
-    a.button-download:focus {
+    a.button-download:hover {
       background-color: #1d4ed8;
-      box-shadow: 0 7px 20px rgba(29,78,216,0.9);
-      outline: none;
+      box-shadow: 0 8px 20px rgba(29,78,216,0.8);
+    }
+
+    section.notice, section.about, section.readme {
+      background-color: #334155;
+      border-radius: 12px;
+      padding: 1.5rem 2rem;
+      margin: 2rem 0;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.5);
+      max-width: 900px;
+      font-size: 1.05rem;
+      line-height: 1.6;
+      text-align: center;
     }
 
     section.notice {
-      background-color: #3b4252;
       border-left: 6px solid #facc15;
-      border-radius: 6px;
-      color: #f9fafb;
-      max-width: 900px;
-      padding: 1rem 1.5rem;
-      margin: 2rem 0 1rem 0;
-      font-weight: 600;
-      text-align: center;
-      user-select: none;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.7);
-    }
-
-    section.about {
-      background-color: #1e293b;
-      border-radius: 12px;
-      padding: 1.5rem 2rem;
-      margin: 2rem 0;
-      color: #cbd5e1;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.8);
-      max-width: 900px;
-      text-align: center;
-      user-select: none;
+      color: #fefce8;
+      font-weight: 700;
     }
 
     section.readme {
-      background-color: #273449;
-      border-radius: 12px;
-      padding: 1.5rem 2rem;
-      margin: 2rem 0;
-      color: #d1d5db;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.7);
-      max-width: 900px;
+      font-family: 'Courier New', Courier, monospace;
       white-space: pre-wrap;
-      font-family: Consolas, "Courier New", monospace;
-      user-select: none;
+      background-color: #1f2937;
+      color: #e5e7eb;
     }
 
     footer {
-      color: #9ca3af;
       font-size: 0.95rem;
-      user-select: none;
-      margin-top: auto;
-      padding: 1.2rem 0;
+      color: #9ca3af;
+      padding: 1.5rem 0;
       text-align: center;
+      width: 100%;
+      margin-top: auto;
     }
 
-    /* Responsive */
-    @media (max-width: 700px) {
+    @media (max-width: 768px) {
       main {
         flex-direction: column;
-        gap: 2.8rem;
+        gap: 2.5rem;
       }
 
       section.app-version {
-        flex: none;
         width: 100%;
       }
-    }
-
-    /* Logout button */
-    #logout-btn {
-      background-color: #ef4444;
-      margin: 1rem auto;
-      width: 120px;
-      text-align: center;
-      border-radius: 8px;
-      font-weight: 700;
-      cursor: pointer;
-      padding: 0.6rem;
-      user-select: none;
-      color: white;
-      border: none;
-      display: block;
-    }
-
-    #logout-btn:hover {
-      background-color: #b91c1c;
     }
   </style>
 </head>
 <body>
 
-<!-- Login / Signup form -->
-<div id="login-container">
-  <h2 id="form-title">Sign In</h2>
-
-  <div id="error-msg" class="error"></div>
-
-  <input type="text" id="username" placeholder="Username" autocomplete="username" />
-  <input type="password" id="password" placeholder="Password" autocomplete="current-password" />
-
-  <button id="action-btn">Sign In</button>
-
-  <div class="toggle" id="toggle-form">Don't have an account? Sign Up</div>
-</div>
-
-<!-- Main page content hidden initially -->
-<div id="main-page" role="main" aria-label="Main DriverChunk Content" tabindex="-1">
-  <button id="logout-btn" aria-label="Logout">Logout</button>
-
-  <header>
-    DriverChunk Solution 2.0<br />
-    Dark Mode & Light Mode Versions
-  </header>
+  <header>DriverChunk Solution 2.0</header>
   <div id="credit">Developed by Arka Nandy</div>
 
   <main>
-    <section class="app-version" id="dark-mode-app">
-      <img src="darkmode-screenshot.png" alt="DriverChunk Solution 2.0 (Dark) Screenshot" />
-      <h2>DriverChunk Solution 2.0 (Dark)</h2>
+    <section class="app-version">
+      <img src="darkmode-screenshot.png" alt="DriverChunk Solution 2.0 (Dark) Screenshot">
+      <h2>Dark Mode Edition</h2>
       <p class="description">
-        This version includes <strong>System Information</strong> and <strong>Installed & Required Drivers</strong> modules,
-        all styled with a sleek dark mode theme for comfortable viewing in low light.
+        Featuring real-time <strong>System Information</strong> and <strong>Installed Drivers</strong> in a stylish dark theme for low-light environments.
       </p>
       <p class="features">
-        • Displays CPU, memory, disk, and system info<br />
-        • Shows installed device drivers and flags missing drivers
+        • CPU, memory, disk, and OS insights<br>
+        • Flags outdated/missing drivers instantly
       </p>
-      <a href="DriverChunkSolution2.0-Dark.zip" class="button-download" download>Download DriverChunk Solution 2.0 (Dark)</a>
+      <a href="DriverChunkSolution2.0-Dark.zip" class="button-download" download>Download Dark Mode</a>
     </section>
 
-    <section class="app-version" id="light-mode-app">
-      <img src="lightmode-screenshot.png" alt="DriverChunk Solution 2.0 (Light) Screenshot" />
-      <h2>DriverChunk Solution 2.0 (Light)</h2>
+    <section class="app-version">
+      <img src="lightmode-screenshot.png" alt="DriverChunk Solution 2.0 (Light) Screenshot">
+      <h2>Light Mode Edition</h2>
       <p class="description">
-        This version features the same <strong>System Information</strong> and <strong>Installed & Required Drivers</strong> functionality,
-        presented in a bright and clean light mode theme for easy daytime use.
+        All the same functionality with a clean, bright theme optimized for daylight usage.
       </p>
       <p class="features">
-        • Displays CPU, memory, disk, and system info<br />
-        • Shows installed device drivers and flags missing drivers
+        • Full system diagnostics<br>
+        • Easy-to-read interface for professionals
       </p>
-      <a href="DriverChunkSolution2.0-Light.zip" class="button-download" download>Download DriverChunk Solution 2.0 (Light)</a>
+      <a href="DriverChunkSolution2.0-Light.zip" class="button-download" download>Download Light Mode</a>
     </section>
   </main>
 
   <section class="notice">
-    WARNING: DriverChunk Solution 2.0 is a beta release. Use at your own risk and always backup your drivers before installing or updating.
+    ⚠️ Beta Notice: This app is in beta. Use responsibly and back up your drivers before applying updates.
   </section>
 
   <section class="about">
-    DriverChunk Solution 2.0 is a free and open-source application built with the latest web technologies, designed to
-    make managing your PC drivers easier. It shows detailed hardware info and helps identify missing or outdated drivers.
+    <strong>About:</strong> DriverChunk Solution 2.0 is a powerful driver management utility for Windows. It identifies system information and shows which drivers are outdated or missing.
   </section>
 
   <section class="readme">
-    Readme:{"\n"}
-    • The app is currently for Windows OS only.{'\n'}
-    • Requires administrator privileges to install or update drivers.{'\n'}
-    • Regular updates coming soon with more features.
+    Readme:
+    • Windows OS only
+    • Admin privileges required for driver updates
+    • Frequent feature updates coming soon
   </section>
 
   <footer>
     &copy; 2024 DriverChunk Solution by Arka Nandy. All rights reserved.
   </footer>
-</div>
-
-<script>
-  // Simple SHA-256 hashing for passwords (for demo only)
-  async function sha256(message) {
-    const msgBuffer = new TextEncoder().encode(message);
-    const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
-    const hashArray = Array.from(new Uint8Array(hashBuffer));
-    return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
-  }
-
-  const loginContainer = document.getElementById('login-container');
-  const mainPage = document.getElementById('main-page');
-  const errorMsg = document.getElementById('error-msg');
-  const formTitle = document.getElementById('form-title');
-  const toggleForm = document.getElementById('toggle-form');
-  const actionBtn = document.getElementById('action-btn');
-  const logoutBtn = document.getElementById('logout-btn');
-
-  let isSignUp = false;
-
-  // Toggle login/signup form
-  toggleForm.addEventListener('click', () => {
-    isSignUp = !isSignUp;
-    formTitle.textContent = isSignUp ? 'Sign Up' : 'Sign In';
-    actionBtn.textContent = isSignUp ? 'Sign Up' : 'Sign In';
-    toggleForm.textContent = isSignUp ? 'Already have an account? Sign In' : "Don't have an account? Sign Up";
-    errorMsg.textContent = '';
-  });
-
-  // Validate username (simple: no spaces, min 3 chars)
-  function validateUsername(u) {
-    return /^[a-zA-Z0-9_]{3,}$/.test(u);
-  }
-
-  // Load users from localStorage
-  function loadUsers() {
-    return JSON.parse(localStorage.getItem('users') || '{}');
-  }
-
-  // Save users to localStorage
-  function saveUsers(users) {
-    localStorage.setItem('users', JSON.stringify(users));
-  }
-
-  // Check if user is "logged in"
-  function getLoggedInUser() {
-    return localStorage.getItem('loggedInUser');
-  }
-
-  // Set logged in user
-  function setLoggedInUser(username) {
-    localStorage.setItem('loggedInUser', username);
-  }
-
-  // Clear logged in user
-  function clearLoggedInUser() {
-    localStorage.removeItem('loggedInUser');
-  }
-
-  // Show main page or login form based on login state
-  function updateView() {
-    const loggedIn = getLoggedInUser();
-    if (loggedIn) {
-      loginContainer.style.display = 'none';
-      mainPage.style.display = 'flex';
-      mainPage.querySelector('header').textContent = `Welcome, ${loggedIn} - DriverChunk Solution 2.0`;
-      errorMsg.textContent = '';
-    } else {
-      loginContainer.style.display = 'flex';
-      mainPage.style.display = 'none';
-      formTitle.textContent = 'Sign In';
-      actionBtn.textContent = 'Sign In';
-      toggleForm.textContent = "Don't have an account? Sign Up";
-      isSignUp = false;
-    }
-  }
-
-  // Handle login or signup button click
-  actionBtn.addEventListener('click', async () => {
-    const username = document.getElementById('username').value.trim();
-    const password = document.getElementById('password').value;
-
-    if (!username || !password) {
-      errorMsg.textContent = 'Please enter username and password.';
-      return;
-    }
-
-    if (!validateUsername(username)) {
-      errorMsg.textContent = 'Username must be at least 3 chars, letters/numbers/_ only.';
-      return;
-    }
-
-    errorMsg.textContent = '';
-
-    const users = loadUsers();
-    const hashedPassword = await sha256(password);
-
-    if (isSignUp) {
-      // Sign Up flow
-      if (users[username]) {
-        errorMsg.textContent = 'User already exists. Please choose another username.';
-        return;
-      }
-      users[username] = hashedPassword;
-      saveUsers(users);
-      errorMsg.style.color = 'lightgreen';
-      errorMsg.textContent = 'User created! Please sign in.';
-      // Switch to sign in form
-      toggleForm.click();
-    } else {
-      // Login flow
-      if (!users[username]) {
-        errorMsg.textContent = 'User not found. Please sign up.';
-        return;
-      }
-      if (users[username] !== hashedPassword) {
-        errorMsg.textContent = 'Incorrect password.';
-        return;
-      }
-      setLoggedInUser(username);
-      updateView();
-      errorMsg.style.color = 'lightgreen';
-      errorMsg.textContent = '';
-    }
-  });
-
-  // Logout button click
-  logoutBtn.addEventListener('click', () => {
-    clearLoggedInUser();
-    updateView();
-  });
-
-  // On load, check login
-  window.onload = () => {
-    updateView();
-  };
-</script>
 
 </body>
 </html>
